# simtensor

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  bandwidth.py  bandwidth_dynamic.py  dynamic.py  matmul3.py  pyproject.toml  simtensor.py  simulate.py  simulator.py
.github/workflows/: ci.yml
tests/: test_allow_lower_level_end_to_end.py  test_bandwidth_dbl_internal_extra.py  test_bandwidth_dynamic_join_matmuls.py  test_bandwidth_dynamic_join_short_keys.py  test_bandwidth_dynamic_key_index.py  test_bandwidth_dynamic_key_info.py  test_bandwidth_dynamic_times.py  test_bandwidth_join_dp_matmuls.py  test_bandwidth_join_matmuls.py  test_bandwidth_join_short_keys.py  test_cache_dynamic_times.py  test_dynamic_times.py  test_dynamic_times_n3.py  test_matmul3.py  test_ppkey.py  test_run_dynamic.py  test_run_dynamic_all_entries.py  test_run_dynamic_best.py  test_run_dynamic_join_matmuls.py  test_simulate.py  test_simulator.py
